fixed centered text from cutting off

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
   background: -webkit-linear-gradient(rgb(0, 0, 0), rgb(0, 150, 250));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  width: 100%;
 }
 
 .carousel {
